--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,12 @@
-#App {
-  background-image: url("./assets/image/earth.jpg") no-repeat center center fixed;
-  
+#mainBackground {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+
+  background-image: url(./assets/image/earth.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  z-index: 0;
 }
