--- a/src/components/projectPage/horizontalList/HorizontalList.css
+++ b/src/components/projectPage/horizontalList/HorizontalList.css
@@ -1,5 +1,5 @@
 .HorizontalList {
-  margin-top: 5vh;
+  margin-top: 8vh;
 
   width: 100vw;
   height: 70vh;
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  gap: 8vw;
+  gap: 7vw;
 
   /* background-color: aquamarine; */
 }
@@ -41,9 +41,72 @@
 .HorizontalList--body {
   width: 60vw;
   height: 100%;
-  background-color: gray;
+  /* background-color: gray; */
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
 }
 
 .HorizontalList--item{
+  height: 100%;
+}
+
+.HorizontalList--item{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.HorizontalList--item .item--leftDescription{
+  width: 50%;
+  height: 100%;
+
+  padding-left: 10%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   
+  gap: 8vh;
+  /* background-color: aquamarine; */
+}
+.item--leftDescription > h1 {
+  margin-top: 10%;
+}
+.item--leftDescription .description {
+  height: 100%;
+  margin-bottom: 20%;
+  
+  display: flex;
+  flex-direction: column;
+
+  gap: 10px;
+
+  /* background-color: aquamarine; */
+}
+.item--leftDescription .button {
+  margin-bottom: 20%;
+  margin-left: 20%;
+  width: fit-content;
+
+  font-weight: 600;
+
+  padding: 10px 20px;
+  border-radius: 10px;
+  background-color: #72f476;
+}
+
+.HorizontalList--item > img {
+  height: 100%;
+  width: auto;
+
+  margin: auto;
+
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+  /* background-color: burlywood; */
 }
