--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,17 @@
-.SkillsPage{
+.SkillsPage {
+  margin-top: 100px;
 
-    margin-top: 15vh;
+  width: 100vw;
+  height: 100vh;
 
-    width: 100vw;
-    height: 100vh;
-
-
-    /* background-color: aquamarine; */
+  /* background-color: aquamarine; */
 }
 
-.ContactPage{
-    width: 100vw;
-    height: 100vh;
+.ContactPage {
+  width: 100vw;
+  height: 100vh;
 
-    margin-top: 15vh;
+  margin-top: 50px;
+
+  /* background-color: teal; */
 }
