--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,43 @@
-.SkillsPage {
-  margin-top: 100px;
+.NavBar {
+  width: 100vw;
+  height: 60px;
 
+  position: fixed;
+
+  background-color: #72f476;
+  box-shadow: 0 0 10px #006336;
+
+  /* config children */
+
+  display: flex;
+  flex-direction: row;
+}
+
+.AboutPage {
   width: 100vw;
   height: 100vh;
+
+  padding-top: 100px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.ProjectPage {
+  width: 100vw;
+  height: 100vh;
+
+  margin-top: 150px;
+
+  /* background-color: blue; */
+}
+
+.SkillsPage {
+  width: 100vw;
+  height: 100vh;
+
+  margin-top: 200px;
 
   /* background-color: aquamarine; */
 }
@@ -11,7 +46,7 @@
   width: 100vw;
   height: 100vh;
 
-  margin-top: 50px;
+  margin-top: 100px;
 
   /* background-color: teal; */
 }
