--- a/src/components/aboutPage/AboutPage.css
+++ b/src/components/aboutPage/AboutPage.css
@@ -1,17 +1,3 @@
-.AboutPage {
-  width: 100vw;
-  height: 100vh;
-
-  padding-top: 15vh;
-  
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-
-/* MID */
 
 .AboutPage--mid {
   width: 100vw;
@@ -23,15 +9,99 @@
   /* background-color: aquamarine; */
 }
 
+.Avatar {
+  /* width: 40vw; */
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+
+  /* background-color: aquamarine; */
+}
+
+.Avatar--image {
+  width: 15vw;
+  height: 15vw;
+
+  background: url(../../assets/image/me.png) no-repeat center;
+  background-size: cover;
+}
+
+.Avatar--description {
+  width: 70%;
+  margin-top: 20px;
+  text-align: start;
+  /* background-color: blueviolet; */
+}
+
+.Content{
+    width: 40vw;
+    /* background-color: aquamarine; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+
+.Content > p {
+    color: gray;
+    font-size: large;
+    margin-left: 50px;
+}
+
+.Content--achievement{
+
+    margin-left: 70px;
+    margin-bottom: 25%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: baseline;
+    gap: 8vw;
+
+    padding-bottom: 0;
+
+}
+
+/* ACHIEVEMENT ITEM */
+.Content--achievement--item{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2vh;
+}
+.Content--achievement--item .num {
+
+    color: black;
+    font-size: xx-large;
+    font-weight: 700;
+    text-align: center;
+}
+.Content--achievement--item .des {
+    color: gray;
+    font-weight: 600;
+    
+    letter-spacing: 2px;
+}
+
 /* BOT */
 .AboutPage--button {
-  margin-top: 3vh;
+  margin-top: 50px;
 
   width: fit-content;
 
-  font-weight: 600;
+  font-weight: 700;
 
-  padding: 0 20px;
+  padding: 5px 25px;
   border-radius: 10px;
   background-color: #72f476;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 20px;
+}
+
+.AboutPage--button .wrapper{
+  width: 30px;
+  height: 100%;
 }
