--- a/src/components/projectPage/ProjectPage.css
+++ b/src/components/projectPage/ProjectPage.css
@@ -1,13 +1,131 @@
-.ProjectPage {
-    margin-top: 10vh;
+.HorizontalList {
+  margin-top: 8vh;
 
-    width: 100vw;
-    height: 100vh;
-    /* background-color: blue; */
+  width: 100vw;
+  height: 70vh;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 7vw;
+
+  /* background-color: aquamarine; */
 }
 
+.HorizontalList--arrowIcon {
+  width: 40px;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.HorizontalList--leftArrow {
+  width: 30px;
+  height: 30px;
+
+  padding: 5px;
+
+  border-radius: 50%;
+  background-color: #72f476;
+}
+
+.HorizontalList--rightArrow {
+  width: 30px;
+  height: 30px;
+
+  padding: 5px;
+
+  border-radius: 50%;
+  background-color: #72f476;
+}
+
+.HorizontalList--body {
+  width: 60vw;
+  height: 100%;
+  /* background-color: gray; */
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+}
+
+.HorizontalList--item{
+  height: 100%;
+}
+
+.HorizontalList--item{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.HorizontalList--item .item--leftDescription{
+  width: 50%;
+  height: 100%;
+
+  padding-left: 10%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  
+  gap: 8vh;
+  /* background-color: aquamarine; */
+}
+.item--leftDescription > h1 {
+  margin-top: 10%;
+}
+.item--leftDescription .description {
+  height: 100%;
+  margin-bottom: 20%;
+  
+  display: flex;
+  flex-direction: column;
+
+  gap: 10px;
+
+  /* background-color: aquamarine; */
+}
+.Project--button {
+  margin-bottom: 50px;
+
+  width: fit-content;
+
+  font-weight: 700;
+
+  padding: 0px 20px;
+  border-radius: 10px;
+  background-color: #72f476;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 20px;
+}
+
+.Project--button .wrapper{
+  width: 30px;
+  height: 100%;
+}
+
+.HorizontalList--item > img {
+  height: 100%;
+  width: auto;
+
+  margin: auto;
+
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+  /* background-color: burlywood; */
+}
+
+/* --------------- 3 dots ---------------- */
 .ProjectPage--3dots{
-    padding-top: 8vh;
+    padding-top: 100px;
 
     width: 50%;
 
