--- a/src/components/skillsPage/SkillsPage.css
+++ b/src/components/skillsPage/SkillsPage.css
@@ -1,6 +1,6 @@
 .SkillsPage--HList{
 
-    margin-top: 5vh;
+    margin-top: 60px;
     
     width: 100%;
     height: 80%;
@@ -13,8 +13,8 @@
 }
 
 .SkillsPage--HList--android{
-    width: 25%;
-    height: 90%;
+    width: 30vw;
+    height: 50vw;
 
     margin: auto;
 
@@ -25,8 +25,8 @@
 }
 
 .SkillsPage--HList--design{
-    width: 25%;
-    height: 90%;
+    width: 30vw;
+    height: 50vw;
 
     margin: auto;
 
@@ -66,6 +66,42 @@
     font-weight: 700;
     /* color: gray; */
 }
+
+.SkillsPage--HList--design .design--body{
+    width: 100%;
+    height: 50px;
+
+    margin-top: 20%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: baseline;
+    gap: 25px;
+
+}
+
+.design--body .design--item{
+    width: 100%;
+    height: 50px;
+    /* background-color: aquamarine; */
+
+    display: flex;
+    flex-direction: row;
+    justify-content: baseline;
+
+    gap: 15px;
+}
+.design--item .iconWrapper{
+    width: 35px;
+    height: 100%;
+
+    margin-left: 15px;
+
+}
+.design--item > p{
+    font-size:medium;
+}
+
 .android--description{
     width: 100%;
     height: auto;
