--- a/src/App.css
+++ b/src/App.css
@@ -16,40 +16,71 @@
 
 .AboutPage {
   width: 100vw;
-  height: 100vh;
+  height: fit-content;
 
   padding-top: 100px;
 
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  /* background-color: #006336; */
 }
 
 .ProjectPage {
   width: 100vw;
-  height: 100vh;
+  height: fit-content;
 
   margin-top: 150px;
 
-  /* background-color: blue; */
+  background-color: blue;
 }
 
 .SkillsPage {
   width: 100vw;
-  height: 100vh;
+  height: fit-content;
 
   margin-top: 200px;
 
-  /* background-color: aquamarine; */
+  background-color: aquamarine;
 }
 
 .ContactPage {
   width: 100vw;
-  height: 100vh;
+  height: fit-content;
 
   margin-top: 100px;
 
-  /* background-color: teal; */
+  background-color: teal;
+}
+
+/* common  */
+
+.btn {
+  font-weight: 700;
+  font-size: large;
+
+  height: 3.6em;
+  min-width: 200px;
+  padding: 0 15px;
+
+  border-radius: 10px;
+  background-color: #72f476;
+
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+
+  cursor: pointer;
+
+  transition: all .26s ease-out;
+
+}
+
+.btn:hover{
+  /* opacity: 0.7; */
+  box-shadow: 0 0 30px #00ee08;
+  background-color: #d4ffd6;
 }
 
 
