--- a/src/components/skillsPage/SkillsPage.css
+++ b/src/components/skillsPage/SkillsPage.css
@@ -1,20 +1,17 @@
-.SkillsPage--HList{
-
+.skills{
     margin-top: 60px;
     
     width: 100%;
-    height: 80%;
+    height: fit-content;
 
-    display: flex;
-    flex-direction: row;
     justify-content: space-around;
 
     /* background-color: aquamarine; */
 }
 
-.SkillsPage--HList--android{
-    width: 30vw;
-    height: 50vw;
+.card-android{
+    width: 350px;
+    height: 550px;
 
     margin: auto;
 
@@ -24,9 +21,9 @@
     /* background-color: bisque; */
 }
 
-.SkillsPage--HList--design{
-    width: 30vw;
-    height: 50vw;
+.card-design{
+    width: 350px;
+    height: 550px;
 
     margin: auto;
 
@@ -36,7 +33,7 @@
     /* background-color: bisque; */
 }
 
-.SkillsPage--HList--itemTitle{
+.card-top{
     width: 100%;
 
     margin: auto;
@@ -47,7 +44,7 @@
 
     /* background-color: blue; */
 }
-.SkillsPage--HList--itemTitle .wrapper{
+.card-top__img{
     width: 35px;
     height: 35px;
 
@@ -56,7 +53,7 @@
     margin-left: auto;
 
 }
-.SkillsPage--HList--itemTitle .title{
+.card-top__title{
     margin-top: 5px;
 
     width: 100%;
@@ -67,7 +64,7 @@
     /* color: gray; */
 }
 
-.SkillsPage--HList--design .design--body{
+.card-design__content{
     width: 100%;
     height: 50px;
 
@@ -80,7 +77,7 @@
 
 }
 
-.design--body .design--item{
+.design-item{
     width: 100%;
     height: 50px;
     /* background-color: aquamarine; */
@@ -91,24 +88,24 @@
 
     gap: 15px;
 }
-.design--item .iconWrapper{
+.design-item__iconWrapper{
     width: 35px;
     height: 100%;
 
     margin-left: 15px;
 
 }
-.design--item > p{
+.design-item > p{
     font-size:medium;
 }
 
-.android--description{
+.card-android__content{
     width: 100%;
     height: auto;
 
     margin-top: 15%;
 }
-.android--item{
+.android-item{
 
     width: 100%;
     height: fit-content;
