--- a/src/components/contactPage/ContactPage.css
+++ b/src/components/contactPage/ContactPage.css
@@ -118,3 +118,17 @@
 
   background-color: #78F27B;
 }
+
+@media screen and (max-width: 46.1875em) {
+  .contact {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+
+    gap: 5em;
+  }
+  .contact__form{
+    align-items: center;
+    /* background-color: aquamarine; */
+  }
+}
