--- a/src/components/projectPage/ProjectPage.css
+++ b/src/components/projectPage/ProjectPage.css
@@ -80,7 +80,7 @@
   width: 50%;
   height: 100%;
 
-  padding-left: 10%;
+  /* padding-left: 10%; */
 
   display: flex;
   flex-direction: column;
@@ -108,6 +108,8 @@
   width: 9em;
 
   height: 2em;
+
+  margin-bottom: 3em;
 
   padding-top: 10px;
   padding-bottom: 10px;
