--- a/src/components/projectPage/ProjectPage.css
+++ b/src/components/projectPage/ProjectPage.css
@@ -1,28 +1,20 @@
-.hlist {
+.projects {
   margin-top: 8vh;
 
   width: 100vw;
   height: 600px;
 
-  display: flex;
-  flex-direction: row;
   justify-content: center;
+  align-items: center;
   gap: 7vw;
 
   /* background-color: aquamarine; */
 }
 
-.hlist-icon {
-  width: 40px;
-  height: 100%;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
+.project-icon {
   cursor: pointer;
 }
-.hlist-icon__arrowLeft {
+.project-icon__arrow {
   width: 30px;
   height: 30px;
 
@@ -32,33 +24,23 @@
   background-color: #72f476;
 }
 
-.hlist-icon__arrowRight {
-  width: 30px;
-  height: 30px;
-
-  padding: 5px;
-
-  border-radius: 50%;
-  background-color: #72f476;
-}
-
-.hlist-body {
+.project-body {
   width: 60vw;
   height: 100%;
   /* background-color: gray; */
 
   position: relative;
 }
-.hlist-body .item {
+.project-body .item {
   width: 100%;
   height: 100%;
   opacity: 0;
   position: absolute;
 
-  transition-duration: 0.5s;
-  transform: scale(0.85);
+  transition-duration: 0.4s;
+  transform: scale(0.9);
 }
-.hlist-body .item.active {
+.project-body .item.active {
   width: 100%;
   height: 100%;
   opacity: 1;
@@ -67,7 +49,7 @@
   transform: scale(1);
 }
 
-.hlist-item {
+.project-item {
   width: 100%;
   height: 100%;
 
@@ -115,7 +97,7 @@
   padding-bottom: 10px;
 }
 
-.hlist-item > img {
+.project-item > img {
   max-width: 300px;
 
   margin: auto;
@@ -161,13 +143,13 @@
 }
 
 @media screen and (max-width: 46.1875em) {
-  .hlist-item {
+  .project-item {
     flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
   }
 
-  .hlist-item > img {
+  .project-item > img {
     max-width: 15em;
 
     margin: auto;
@@ -186,18 +168,19 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: baseline;
+    align-items: center;
 
     gap: 8vh;
     /* background-color: aquamarine; */
   }
 
   .item-leftDescription > h1 {
-    width: fit-content;
+    width: 100%;
     margin-top: none;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
 
     /* background-color: #72f476; */
   }
@@ -206,12 +189,4 @@
     display: none;
   }
 
-  .btn-more {
-    min-width: 9em;
-
-    margin-left: auto;
-    margin-right: auto;
-
-    padding: 10px auto;
-  }
 }
