--- a/src/components/contactPage/ContactPage.css
+++ b/src/components/contactPage/ContactPage.css
@@ -132,7 +132,7 @@
     width: fit-content;
     height: fit-content;
 
-    margin-left: 0px;
+    margin: 0px 10px;
 
     /* justify-content: baseline; */
     gap: 2em;
