--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -25,6 +25,8 @@
   justify-content: flex-end;
   align-items: center;
   gap: 5%;
+
+  cursor: pointer;
 }
 
 @media screen and (max-width: 46.1875em) {
